--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -20,6 +20,9 @@
       {%- endif -%}
       <div class="footer__author-links">
         {%- include author-links.html author=_site_author -%}
+        <a title="https://dapjidown.com" href="https://dapjidown.com">https://dapjidown.com</a>
+        <a title="https://6sixfigures.com" href="https://6sixfigures.com">https://6sixfigures.com</a>
+        <a title="https://aliexpresss.kr/" href="https://aliexpresss.kr/">https://aliexpresss.kr/</a>
       </div>
     </div>
     {%- include snippets/get-locale-string.html key='COPYRIGHT_DATES' -%}
